<resources>
    <string name="app_name">Nyumba kumi Tool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="logout">Logout</string>
    <string name="nyumba_kumi_tool">Nyumba Kumi Tool</string>
    <string name="username">Username</string>
    <string name="message_content">Message content</string>
    <string name="timestamp">Timestamp</string>
    <string name="image_post">Image post</string>
    <string name="user_profile_picture">User Profile picture</string>
    <string name="message_content_goes_here">Message content goes here</string>
    <string name="reports">Reports</string>
    <string name="new_report">New Report</string>
    <string name="enter_report_content">Enter report content.</string>
    <string name="upload_media">Upload Media</string>
    <string name="submit_report">Submit Report</string>
    <string name="chats">Chats</string>
    <string name="users">Users</string>
    <string name="groups">Groups</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="message">Message</string>
    <string name="new_group">New Group</string>
    <string name="group_name">Group Name</string>
    <string name="admin_id">Admin ID</string>
    <string name="created_at">Created At</string>
    <string name="enter_group_name">Enter group name.</string>
    <string name="create_group">Create group.</string>
    <string name="add_users">Add Users</string>
    <string name="notification">Notification</string>
    <string name="title_activity_notification_handler">NotificationHandlerActivity</string>
    <string name="user">User</string>
    <string name="displayed_image">Displayed image</string>
</resources>